2006-10-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSCalendarDate+SOGo.m ([NSCalendarDate -adjustedDate]) 
	([NSCalendarDate -driftedDate]): methods made useless by a better
	comprehension of the NSTimeZone API...

2006-10-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -selectedDate]): call
	new methods from the NSCalendarDate methods.

	* SoObjects/SOGo/NSCalendarDate+SOGo.m: module replacing and
	extending UI/Scheduler/NSCalendarDate+Scheduler.m.
	([NSCalendarDate
	+dateFromShortDateString:dateStringandShortTimeString:timeStringinTimeZone:timeZone]): new method that generates a date from two short string formatted as follow: "yyyymmdd" and "hhmm". Thismethod replaces a similar method from UIxComponent (noted below).
	([NSCalendarDate -adjustedDate]): this method returns another
	instance set to the correct hour after the original date was set
	from a non-GMT timezone. This date can be used for storage.
	([NSCalendarDate -driftedDate]): this method does exactly the
	opposite of -adjutedDate, that is, it enables the method
	hourOfDay, minuteOfHour etc... to return the values according to
	the original date's timezone. This date CANNOT be used for storage.

	* UI/Scheduler/NSCalendarDate+Scheduler.m ([NSCalendarDate
	-shortDateString]): new method that will return a "short date
	string" (yyyymmdd) from a calendar date object.

	* UI/SOGoUI/UIxComponent.m ([UIxComponent
	-_cDateFromShortDateString:dateStringandShortTimeString:timeString]): new method to compute the selected date from the "day" and "hm" query parameters (if found). This method replaces the old algorithm that was found in the "selectedDate" method.

	* Main/sogod.m (main): initialize the NSTimeZone's defaultTimeZone
	to the value of SOGoServerTimeZone or "Canada/Eastern" if not found.

2006-10-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/SchedulerUI.js: added code to scroll the