@@ -1,5 +1,8 @@
 2006-10-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* UI/Scheduler/UIxAppointmentEditor.m: indicate DTSTAMP with "GMT"
+	as timezone.
+
 	* SoObjects/SOGo/NSCalendarDate+SOGo.m ([NSCalendarDate -adjustedDate]) 
 	([NSCalendarDate -driftedDate]): methods made useless by a better
 	comprehension of the NSTimeZone API...
